--- a/Week 5/Module 19/.vscode/settings.json
+++ b/Week 5/Module 19/.vscode/settings.json
@@ -1,4 +1,4 @@
 {
-          "editor.tabSize": 1,
-          "files.autoSave": "afterDelay"
+          "editor.tabSize": 4,
+          "files.autoSave": "off"
 }
